# hadlink

./: .gitignore  LICENSE.md  README.md  REPO_ANALYSIS.md  SECURITY_ANALYSIS.md  all.do  clean.do  default.do  generate-secret.do  prove.do  run-shorten.do  style.do  test.do
.github/workflows/: build.yml  deploy-docker.yml  deploy-systemd.yml  integration.yml  prove.yml  release.yml  style.yml  test.yml
LICENSES/: Apache-2.0-Docker.txt  BSD-3-Clause-GHC.txt  BSD-3-Clause-SPARKNaCl.txt  BSD-3-Clause-Stack.txt  GPL-3.0-Alire.txt  GPL-3.0-with-GCC-exception-GNAT.txt  MIT-redo.txt  curl-license.txt
deploy/: deploy.sh
deploy/docker/: .env  Dockerfile  Dockerfile.runtime  docker-compose.yml
deploy/systemd/: hadlink-redirect.service  hadlink-shorten.service  hadlink.conf
docs/: API.md  CONTRIBUTING.md  DEPLOYMENT.md  FFI_INTEGRATION.md  GOLD_LEVEL_PROOFS.md  README.md  ROADMAP.md
docs/audit/: README.md  REPO_ANALYSIS.md  SECURITY_ANALYSIS.md
docs/examples/: README.md  ci-integration.sh  config.example.env  config.example.yaml
docs/whitepapers/: formal-verification-lens.tex  hadlink.tex  sprint-projects.tex
haskell/: build.do  hadlink.cabal  test-ffi-no-init.hs  test-ffi.hs
haskell/app/: Main.hs  RedirectMain.hs  ShortenMain.hs
haskell/src/: API.hs  Canonicalize.hs  Health.hs  Logging.hs  ProofOfWork.hs  RateLimit.hs  ShortCode.hs  SparkFFI.hi  SparkFFI.hs  Store.hs  Types.hi  Types.hs
haskell/src-shorten/: API.hs  Canonicalize.hs  RateLimit.hs
haskell/src-shorten/API/: Shorten.hs
haskell/src/API/: Resolve.hs
haskell/test/: Properties.hs
spark-core/: alire.toml  build.do  core.adb  core.ads  core_ffi.adb  core_ffi.ads  hadlink_core.gpr
spark-core/proof/: core.gpr
spark-core/src/: core.adb  core.ads  core_ffi.adb  core_ffi.ads  core_gold.adb  core_gold.ads  hadlink_core.ads
spark-core/tests/: build-freeze-test.do  test_ffi_freeze  test_ffi_freeze.c
